--- a/src/components/generic/events/christmas/Snowfall.css
+++ b/src/components/generic/events/christmas/Snowfall.css
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
     z-index: -1000;
-	zoom: 1.25;
+	/* zoom: 1.25; */
 }
 
 .snow {
